actualizacion vista dependencias

--- a/src/views/dependencias/dependencia.html
+++ b/src/views/dependencias/dependencia.html
@@ -102,21 +102,10 @@
                     </button>
                   </div>                   
                   </div>
-
-                 
                 </div>
-
-                
-                
                 <div class="card-body ">
-                  <div id="chartdivComunas"class="input-group  col-12 col-12-mobilep" style="width: 100%;
-                  height: 700px; font-size	: 11px;">
-                 
-                  </div>                   
+                  <div id="chartdivComunas"class="input-group  col-12 col-12-mobilep" style="width: 100%; height: 700px; font-size	: 11px;"></div>                   
                 </div>
-                
-           
-           
           </div>
           <div class="card border-light shadow-sm p-3 mb-1 bg-white rounded">
             <div class="card-header" id="nombrecomuna"> </div>
