--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -45,17 +45,19 @@
     
             <li ontouchstart="this.classList.toggle('hover');">
               <div class="large button card-front">
-                <a href="http://www.aaronsnowberger.com">Plan Inidicativo</a>
+                <a href="http://localhost:7000/">Plan Inidicativo</a>
                 <i class="fa fa-pencil-square-o card-icon"></i>
               </div>
     
               <div class="panel card-back">
                 <i class="fa fa-pencil-square-o card-icon"></i>
                 <div class="hub-info">
-                  <a href="http://www.aaronsnowberger.com">AaronSnowberger.com</a>
+                  <a href="http://localhost:7000/">Plan Indicativo</a>
                   <p>Take a look at my graphic design portfolio and contact me for design work.</p>
                 </div>
-                <small class="clear">Updated Saturdays.</small>
+                <small class="clear">
+                  <a href="http://localhost:7000/" class="btn btn-outline-success btn-sm">Ingresar</a>
+                </small>
               </div>
             </li>
     
