--- a/src/views/cuatrienios/alonso.html
+++ b/src/views/cuatrienios/alonso.html
@@ -19,17 +19,32 @@
 
     <!--Card con datos iniciales en encabezado-->
     <div class="card-header shadow p-3 mb-5 bg-white rounded">
-      <h6 class="text-muted" style="text-align: center;font-size: 20px;line-height: 20px;font-weight: 600;color: #73879C;
-        font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">
-        <p style="align-items: center;"> <img src="/img/logo.png" style="width: 20%;" alt=""></p>Total Inversión Pública
-        Municipio de Medellín
-      </h6>
-      <p class="text-muted" style="text-align: center;font-size: 18px;line-height: 18px;font-weight: 600;color: #73879C;
-        font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">2012-2015 </p>
-      <h4 class="text-muted" style="text-align: center;font-size: 28px;line-height: 28px;font-weight: 600;color: #73879C;
-        font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">
-        <%= new Intl.NumberFormat('en-US', {style:'currency', currency:'USD'}).format(parseInt(total)) %> </h4>
+      <div class="card mb-3" style="max-width: 100%;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="/img/siiee.png" alt="" style="width: 90%;" class="card-img"  >
+          </div>
+          <div class="col-md-8 mt-2">
+            <h6 class="text-muted" style="text-align: center;font-size: 25px;line-height: 20px;font-weight: 600;color: #73879C;
+                font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">
+                <p style="align-items: center;"> <img src="/img/logo.png" style="width: 50%;" alt=""></p>
+              Total Inversión Pública Municipio de Medellín
+            </h6>
+            <p class="text-muted" style="text-align: center;font-size: 18px;line-height: 18px;font-weight: 600;color: #73879C;
+               font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">2012-2015
+            </p>
+            <h4 class="text-muted" style="text-align: center;font-size: 28px;line-height: 28px;font-weight: 600;color: #73879C;
+              font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">
+              <%= new Intl.NumberFormat('en-US', {style:'currency', currency:'USD'}).format(parseInt(total)) %> 
+            </h4>
+          </div>
+     
+        </div>
+      </div>
+     
     </div>
+
+ 
 
     <section class="shadow p-3 mb-5 bg-white rounded">
       <div class="card text-center ">
