--- a/src/views/cuatrienios/cuatrienio.html
+++ b/src/views/cuatrienios/cuatrienio.html
@@ -20,10 +20,11 @@
     <section class="cardcontainer mt-4">
       <div class="card text-center">
         <div class="card-header">
-          <div class="card-header">
-            <h6 class="text-muted" style="text-align: center; font-size: 30px;line-height: 20px;font-weight: 600;color: #73879C;
+          <div class="card-header"style="background-color:white">
+            <h6 class="text-muted" style="text-align: center; font-size: 25px;line-height: 20px;font-weight: 600;color: #73879C;
             font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;"><p style="align-items: center;">
-             <img src="/img/logo.png" style="width: 25%;" alt=""></p>Inversión Pública Total Cuatrienios</h6>
+              <img src="/img/siiee.png" alt="" style="width: 35%;">
+             <!--<img src="/img/logo.png" style="width: 25%;" alt="">< --></p>Inversión Pública Total Cuatrienios</h6>
         </div>
           <h6 class="text-muted" style="text-align: center;font-size: 20px;line-height: 47px;font-weight: 600;color: #73879C;
             font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;"></h6>
