--- a/src/views/dependencias/dependencia.html
+++ b/src/views/dependencias/dependencia.html
@@ -117,28 +117,32 @@
           <div class="card-deck ">
             <div class="card border-light shadow-sm p-3 mb-2 bg-white rounded">
               <div class="card-body ">
-                <h6 class="card-title cardheader" style="color: #73879C;">Inversión Localizada</h6>
-                <h6  id="inverLocalizada" style="color: rgb(17, 160, 41);" id="vigenciaLocal" class="card-text total"> <b> </b></h6>
+                <h4 class="card-title cardheader" style="color: #73879C;text-align: center;">Inversión Localizada</h4>
+                <h6  id="inverLocalizada" style="text-align: center;font-size: 20px;line-height: 20px;font-weight: 200;color: #73879C;
+                font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;" id="vigenciaLocal" class="card-text total"> <b> </b></h6>
                 </div>
               </div>
               <div class="card border-light shadow-sm p-3 mb-2 bg-white rounded">
                 <div class="card-body ">
-                  <h6 class="card-title cardheader" style="color: #73879C;">Inversión de Ciudad</h6>
-                  <h6 id="inverCiudad"  style="color: rgb(17, 160, 41);" id="vigenciaLocal" class="card-text total"> <b> </b></h6>
+                  <h4 class="card-title cardheader" style="color: #73879C;text-align: center;">Inversión de Ciudad</h4>
+                  <h6 id="inverCiudad"  style="text-align: center;font-size: 20px;line-height: 20px;font-weight: 200;color: #73879C;
+                  font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;"  class="card-text total"> <b> </b></h6>
                  
                 </div>
               </div>
               <div class="card border-light  shadow-sm p-3 mb-2 bg-white rounded">
                 <div class="card-body ">
-                  <h6 class="card-title cardheader" style="color: #73879C;">Presupuesto Participativo</h6>
-                  <h6 id="pp" style="color: rgb(17, 160, 41);" id="vigenciaLocal" class="card-text total"> <b></b></h6>
+                  <h4 class="card-title cardheader" style="color: #73879C;text-align: center;">Presupuesto Participativo</h4>
+                  <h6 id="pp" style="text-align: center;font-size: 20px;line-height: 20px;font-weight: 200;color: #73879C;
+                  font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;" class="card-text total"> <b></b></h6>
                 
                 </div>
               </div>
               <div class="card border-light  shadow-sm p-3 mb-2 bg-white rounded">
                 <div class="card-body ">
-                  <h6 class="card-title cardheader" style="color: #73879C;">Fortalecimiento Institucional</h6>
-                  <h6 id="pp" style="color: rgb(17, 160, 41);" id="vigenciaLocal" class="card-text total"> <b></b></h6>
+                  <h4 class="card-title cardheader" style="color: #73879C;text-align: center;">Fortalecimiento Institucional</h4>
+                  <h6 id="fortinst"  style="text-align: center;font-size: 20px;line-height: 20px;font-weight: 200;color: #73879C;
+                  font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;" class="card-text total"> <b></b></h6>
                 
                 </div>
               </div>
@@ -147,14 +151,9 @@
 
 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
-  <div class="card-deck text-center mt-2 mb-2">
-    <div class="card border-light shadow-sm p-3 mb-1 bg-white rounded">
-      <div class="card-body " id="chartComVigDep" style="width: 100%; height: 750px;"></div>
-    </div>
 
-  </div>
-  <div class="card border-light shadow-sm p-3 mb-3 bg-white rounded">
-    <div class="card-body"  style="width: 100%; height: 750px;" >
+  <div class="card border-light shadow-sm p-3 mb-5 bg-white rounded">
+    <div class="card-body"  style="width: 100%; height: 100%;" >
       <div class="table-responsive-sm">
          <table class="table table-sm table-hover table-inverse table-responsive-md">
         <thead class="thead-inverse">
@@ -163,6 +162,7 @@
             <th>Dependencia</th>
             <th>Cod_BPIN</th>
             <th>Nombre del Proyecto</th>
+            <th>Comuna</th>
             <th>Inversión</th>
             <th>*espp</th>
           </tr>
@@ -174,40 +174,40 @@
             <th>Dependencia</th>
           <th>Cod_BPIN</th>
           <th>Nombre del Proyecto</th>
+          <th>Comuna</th>
           <th>Inversión</th>
           <th>*espp</th>
           </tr>
          <tr>
-           <td colspan="6">espp: 1: Proyectos de presupuesto participativo. 0:Proyectos de iniciativa de la Administración Municipal</td>
+           <td colspan="7">espp: 1: Proyectos de presupuesto participativo. 0:Proyectos de iniciativa de la Administración Municipal</td>
          </tr>
 
         </tfoot>
     </table>
       </div>
      <div>
-        <nav aria-label="Page navigation example">
-         <ul class="pagination justify-content-center" id="page_num">
-        
-
-        <li class="page-item">
-          <a class="page-link"  aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li>
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+       
 
      </div>
     
     </div>
   </div>
+
 </div>
-          
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center" id="page_num">
+     <li class="page-item">
+       <a class="page-link"  aria-label="Previous">
+         <span aria-hidden="true">&laquo;</span>
+       </a>
+     </li>
+     <li>
+     <a class="page-link" href="#" aria-label="Next">
+       <span aria-hidden="true">&raquo;</span>
+     </a>
+   </li>
+ </ul>
+</nav>       
 <div class="card-body ">
   <div class="col-12 col-12-mobilep form-group input-group justify-content-center" role="group">
     <button type="button" class="btn btn-outline-info mr-2" ><i class="fa fa-sellsy fa-1x" style="width: 20px; height: 20px;"></i></button>
