--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -1,11 +1,13 @@
 <br><br>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
     <div class="container-fluid">
+    
       <a class="navbar-brand" href="#"><h2 ><%= title %>  </h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
+      
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/">Home
@@ -22,12 +24,15 @@
             <a class="nav-link" href="/comunas">Comunas</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Barrios</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/dependencias">Dependencias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/proyectos">Proyectos</a>
           </li>
-          <li class="nav-item">
+         <!-- <li class="nav-item">
             <a class="nav-link" href="/proyectos">Plan Indicativo</a>
           </li>
           <li class="nav-item">
@@ -41,7 +46,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/proyectos">Población</a>
-          </li>
+          </li>--> 
           <li class="nav-item">
             <a class="nav-link" href="/contacto">Contact</a>
           </li>
