--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -32,9 +32,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/proyectos">Proyectos</a>
           </li>
-         <!-- <li class="nav-item">
-            <a class="nav-link" href="/proyectos">Plan Indicativo</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/desagregacion">Desagregacion</a>
           </li>
+         <!--
           <li class="nav-item">
             <a class="nav-link" href="/proyectos">Plan de Acción</a>
           </li>
